# pricing-discount-governance-system

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: dashboard_policy.json  metric_contracts.json  policy_thresholds.json  release_policy.json
configs/: metric_contracts.json
dashboard/: README.md
data/processed/sql_marts/: mart_customer_pricing_profile.csv  mart_monthly_pricing_health.csv  mart_overall_pricing_health.csv  mart_product_pricing_summary.csv  mart_segment_channel_diagnostics.csv  (+1 more)
docs/: README.md  business_problem_and_metric_framework.md  dashboard_guide.md  data_dictionary.md  data_model_and_grain.md  data_profiling_report.md  executive_summary.md  final_validation_review.md  formal_analysis_report.md  governance_release_policy.md  index.html  operations_runbook.md  pricing-discipline-command-center.html  project_context_and_metrics.md  release_and_reproducibility.md  reproducibility_and_artifact_policy.md  risk_scoring_methodology.md  sql_query_patterns.md  validation_framework.md  warehouse_analytics_layer.md
docs/reports/: data_profiling_report.md  executive_summary.md  formal_analysis_report.md
notebooks/: pricing_discount_governance_system.ipynb
outputs/: README.md  final_validation_issues.csv  final_validation_readiness.csv  final_validation_review.md  final_validation_summary.json  formal_analysis_validation_checks.csv  index.html  metric_contract_validation.csv  processed_validation_report.csv  raw_validation_report.csv  run_manifest.json  visualization_pack.md
outputs/analysis/: channel_pricing_summary.csv  channel_region_pricing_inconsistency.csv  customer_discount_dependency.csv  discount_dependency_concentration.csv  formal_analysis_summary.json  governance_action_queue.csv  key_findings.json  margin_erosion_risk.csv  monthly_pricing_performance.csv  overall_pricing_health.csv  product_discount_dependency.csv  product_governance_patterns.csv  product_price_variance.csv  product_pricing_summary.csv  recommended_analytical_focus.csv  rep_pricing_diagnostics.csv  rep_pricing_inconsistency.csv  risk_by_segment.csv  segment_discount_dependency.csv  threshold_sensitivity_analysis.csv  top_risk_customers.csv  yearly_pricing_health.csv
outputs/dashboard/: README.md  index.html  pricing-discipline-command-center.html
outputs/profiling/: column_profile.csv  data_quality_issues.csv  population_coverage.csv  table_numeric_summary.csv  table_profile_summary.csv  table_top_values.csv
outputs/release/: release_gate_report.json  release_gate_report.md  release_readiness.json  release_readiness.md
outputs/visualizations/: visualization_manifest.csv
outputs/warehouse/: sql_model_manifest.json  sql_model_run_log.csv  sql_validation_report.csv
scripts/: build_dashboard.py  build_report_assets.py  build_report_pdf.py  build_visualization_pack.py  cleanup_repository.py  generate_graphs.py  generate_synthetic_data.py  preflight_check.py  publish_pages_dashboard.py  release_gate.py  run_pipeline.py  run_sql_models.py
sql/: README.md
sql/marts/: mart_customer_pricing_profile.sql  mart_monthly_pricing_health.sql  mart_overall_pricing_health.sql  mart_product_pricing_summary.sql  mart_segment_channel_diagnostics.sql  mart_segment_pricing_summary.sql
sql/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_sales_reps.sql
src/analysis/: business_analysis.py  dashboard_builder.py  data_profiling.py  formal_analysis.py  notebook_builder.py  visualization_pack.py
src/features/: pricing_features.py
src/ingestion/: load_raw.py  synthetic_data.py
src/processing/: build_base_tables.py  sql_warehouse.py
src/scoring/: risk_scoring.py
src/utils/: io.py  paths.py  policy.py
src/validation/: data_quality.py  final_review.py  metric_contracts.py  release_gate.py
tests/: test_adversarial_inputs.py  test_dashboard_builder.py  test_data_profiling.py  test_final_review.py  test_formal_analysis_helpers.py  test_formal_analysis_window.py  test_load_raw.py  test_metric_contracts.py  test_pipeline_cli.py  test_pipeline_integrity.py  test_pricing_core_logic.py  test_release_gate.py  test_utils_io_policy.py  test_utils_paths.py  test_visualization_pack.py
