[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-discount-governance-system"
version = "1.0.0"
description = "Reproducible pricing governance analytics for discount leakage, margin exposure, and customer intervention prioritization."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Miguel Fidalgo Martins", email = "mfidalgomartins@gmail.com" }]
keywords = ["pricing", "governance", "analytics", "duckdb", "synthetic-data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas==3.0.1",
    "numpy==2.4.6",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "duckdb==1.5.1",
    "pillow==12.3.0",
    "reportlab==4.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==6.1.0",
    "ruff==0.15.19",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "pre-commit==4.6.0",
]

[project.urls]
Homepage = "https://github.com/mfidalgomartins/pricing-discount-governance-system"
Dashboard = "https://mfidalgomartins.github.io/pricing-discount-governance-system/"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "outputs", "data"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear,
# C4 comprehensions, SIM simplify, S security checks.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "S"]
# The formatter owns line length (line-length above); we do not also lint E501,
# because the remaining long lines are intentional HTML/report string literals
# where wrapping would change generated output or hurt readability.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Runnable scripts deliberately bootstrap sys.path before importing local packages,
# so module-level imports cannot all sit at the top of the file.
"scripts/*" = ["E402"]
"scripts/preflight_check.py" = ["S607"]
"src/processing/sql_warehouse.py" = ["S608"]
"tests/*" = ["S101", "S108"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
